--- a/CoreMVC5_UsedBookProject/appsettings.json
+++ b/CoreMVC5_UsedBookProject/appsettings.json
@@ -9,6 +9,7 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "AccountContext": "data source=(localdb)\\mssqllocaldb;initial catalog=CoreMVC5_UsedBookProject",
-    "ProductContext": "Server=(localdb)\\mssqllocaldb;Database=CoreMVC5_UsedBookProject;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "ProductContext": "Server=(localdb)\\mssqllocaldb;Database=CoreMVC5_UsedBookProject;Trusted_Connection=True;MultipleActiveResultSets=true",
+    "OrderContext": "Server=(localdb)\\mssqllocaldb;Database=CoreMVC5_UsedBookProject"
   }
 }
