--- a/CoreMVC5_UsedBookProject/appsettings.json
+++ b/CoreMVC5_UsedBookProject/appsettings.json
@@ -8,7 +8,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "ProductContext": "Server=(localdb)\\mssqllocaldb;Database=CoreMVC5_UsedBookProject;Trusted_Connection=True;MultipleActiveResultSets=true",
-    "AdminAccountContext": "data source=(localdb)\\mssqllocaldb;initial catalog=AccountDatabase"
+    "ProductContext": "Server=localhost;Database=CoreMVC5_UsedBookProject;Trusted_Connection=True;MultipleActiveResultSets=true",
+    "AdminAccountContext": "Server=localhost;Database=AccountDatabase;Trusted_Connection=True;MultipleActiveResultSets=true"
   }
 }
