--- a/.gitignore
+++ b/.gitignore
@@ -362,3 +362,4 @@ MigrationBackup/
 # Fody - auto-generated XML schema
 FodyWeavers.xsd
 /CoreMVC5_UsedBookProject/Images/
+/CoreMVC5_UsedBookProject/wwwroot/Images/
