--- a/CoreMVC5_UsedBookProject/appsettings.json
+++ b/CoreMVC5_UsedBookProject/appsettings.json
@@ -8,7 +8,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "ProductContext": "Data Source=tcp:coremvc5-usedbookprojectdbserver.database.windows.net,1433;Initial Catalog=CoreMVC5_UsedBookProject_db;User Id=potatodog@coremvc5-usedbookprojectdbserver;Password=Chu123456",
-    "AdminAccountContext": "Data Source=tcp:coremvc5-usedbookproject-admindbserver.database.windows.net,1433;Initial Catalog=CoreMVC5_UsedBookProject_db_Admin;User Id=potatodog@coremvc5-usedbookproject-admindbserver;Password=Chu123456"
+    "ProductContext": "Server=localhost;Database=CoreMVC5_UsedBookProject;Trusted_Connection=True;MultipleActiveResultSets=true",
+    "AdminAccountContext": "Server=localhost;Database=AccountDatabase;Trusted_Connection=True;MultipleActiveResultSets=true"
   }
 }
