--- a/CoreMVC5_UsedBookProject/CoreMVC5_UsedBookProject.csproj
+++ b/CoreMVC5_UsedBookProject/CoreMVC5_UsedBookProject.csproj
@@ -23,6 +23,7 @@
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="5.0.2" />
+    <PackageReference Include="StackExchange.Redis" Version="2.6.122" />
   </ItemGroup>
 
   <ItemGroup>
